--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Created by webjeda - http://webjeda.com
 
 title: acadé #Keep it short
-email: your@email.com
+email: contact@acade.fr
 
 
 baseurl: /bheema
