--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 #Created by webjeda - http://webjeda.com
 
-title: acadé #Keep it short
+title: acadé - Joël Gronfier#Keep it short
 email: contact@acade.fr
 
 
