tentative nouveau titre

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Created by webjeda - http://webjeda.com
 
-title: acadé #Keep it short
-subtitle: Joël Gronfier
+title: Joël Gronfier #Keep it short
+subtitle: ACompagnement Au DÉvelopement
 email: contact@acade.fr
 
 
