retour aux méta-données initiales

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Created by webjeda - http://webjeda.com
 
-title: Joël Gronfier #Keep it short
-subtitle: ACompagnement Au DÉvelopement
+title: acadé #Keep it short
+subtitle: Joel Gronfier
 email: contact@acade.fr
 
 
